src/objects/Donation_Tag__c.object
<CustomObject>
    <fields>
        <fullName>Donation_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Donation Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Donation Tags</relationshipLabel>
        <relationshipName>Donation_Tags</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tag_Name__c</fullName>
        <formula>Tag__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tag Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tag</label>
        <referenceTo>Tag__c</referenceTo>
        <relationshipLabel>Donation Tags</relationshipLabel>
        <relationshipName>Donation_Tags</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Donation Opportunity</label>
    <nameField>
        <displayFormat>TAG-{0000}</displayFormat>
        <label>Donation Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donation Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>